test/semantic_errors/invalid_assignment9.mc
void main() {
    int *p;
    bool b;
    b = *p; /* cannot assign pointed int to bool */
}